# lua-libs

./: .gitignore  CMakeLists.txt  Readme.md  lua51.exp  lua51.lib  test.lua
AssimpToLove/: CMakeLists.txt  lib.cpp  lib.h
AssimpToLua/: AssimpToLua.cpp  AssimpToLua.h  CMakeLists.txt  lib.cpp  lib.h
ExampleLuaLib/: CMakeLists.txt  README.md  lib.cpp  lib.h
Integer/: CMakeLists.txt  README.md  lib.cpp  lib.h  test.lua
lglm/: CMakeLists.txt  glmath.cpp  glmath.h  lib.cpp  lib.h  mat.h  vec.h
love-test/: copy_libs.bash  debug.bash  main.lua  util.lua
